Affichage liste non detaillé lien avec fiche detail Filtrage avec bouton Version THoimas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         </activity>
         <activity android:name=".DetailsPaysActivity"
             android:exported="true" />
+        <activity android:name=".ListPaysActivity"
+            android:exported="true" />
 
     </application>
 
