--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:exported="true" />
         <activity android:name=".ListPaysActivity"
             android:exported="true" />
-        <activity android:name=".BonusGameActivity"
+        <activity android:name=".JeuBonusActivity"
             android:exported="true" />
 
     </application>
